// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns both normal users and system users 1`] = `
[
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "0ffbd058-391f-42a3-839f-b6cdd55325db",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "71a46e4a-a030-48be-8a60-982d93a8192e",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "def971c6-4303-40bf-8822-85468b8ab756",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "e0f1460b-9569-49cf-88eb-21e0c5f8c899",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "ea498fc5-6ef8-4027-893f-972dbfe25fb9",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "id": "[sanitized]",
    "name": "My health system integration",
    "role": "HEALTH",
    "type": "system",
  },
]
`;

exports[`Returns multiple users with honorifics 1`] = `
[
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": "4th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "0ffbd058-391f-42a3-839f-b6cdd55325db",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": "5th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "71a46e4a-a030-48be-8a60-982d93a8192e",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": "6th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "def971c6-4303-40bf-8822-85468b8ab756",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": "7th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "e0f1460b-9569-49cf-88eb-21e0c5f8c899",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
  {
    "avatar": undefined,
    "device": undefined,
    "fullHonorificName": "8th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "ea498fc5-6ef8-4027-893f-972dbfe25fb9",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "type": "user",
  },
]
`;
